# juce-vcpkg-template

./: .gitignore  CMakeCIPresets.json  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: ci.yml
src/: PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  moduleinfo.json
